// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Registration stack matches the snapshot for CODE 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Registration for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "registration",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "CPUAlarmPeriodLower": 300,
        "CPUAlarmPeriodUpper": 1200,
        "CPUAlarmThresholdLower": 20,
        "CPUAlarmThresholdUpper": 50,
        "InstanceType": "t4g.small",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "CPUAlarmPeriodLower": 300,
        "CPUAlarmPeriodUpper": 60,
        "CPUAlarmThresholdLower": 20,
        "CPUAlarmThresholdUpper": 50,
        "InstanceType": "t4g.small",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AlarmTopic": {
      "Description": "The ARN of the SNS topic to send all the cloudwatch alarms to",
      "Type": "String",
    },
    "CertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "LoggingStreamName": {
      "AllowedValues": [
        "/account/services/logging.stream.name.code",
        "/account/services/logging.stream.name",
      ],
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "NotEnough200sPerDayThreshold": {
      "Description": "Alarm if less than too many 200s. This value was based on just below 2 standard deviations from the mean over 6 weeks of data.",
      "Type": "Number",
    },
    "NotEnough200sThreshold": {
      "Description": "Alarm if less than this many 200s in half an hour",
      "Type": "Number",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "RunbookCopy": {
      "Default": "<<<Runbook|https://docs.google.com/document/d/1aJMytnPGeWH8YLpD2_66doxqyr8dPvAVonYIOG-zmOA>>>",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
  },
  "Resources": {
    "DistributionInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "DistributionRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "DistributionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": [
                    "ec2:DescribeTags",
                    "ec2:DescribeInstances",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "HighCPUAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "ScaleUpPolicy",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": [
            "Scale-Up if CPU is greater than \${CPUAlarmThresholdUpper} % over last \${CPUAlarmPeriodUpper} seconds",
            {
              "CPUAlarmPeriodUpper": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdUpper",
                ],
              },
              "CPUAlarmThresholdUpper": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdUpper",
                ],
              },
            },
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "AutoScalingGroupName",
            "Value": {
              "Ref": "PrivateRegistrationAutoscalingGroup",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/EC2",
        "Period": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmPeriodUpper",
          ],
        },
        "Statistic": "Average",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmThresholdUpper",
          ],
        },
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Fn::Sub": "\${CertArn}",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "LowCPUAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "ScaleDownPolicy",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": [
            "Scale-Down if CPU is less than \${CPUAlarmThresholdLower} % over last \${CPUAlarmPeriodLower} seconds",
            {
              "CPUAlarmPeriodLower": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmPeriodLower",
                ],
              },
              "CPUAlarmThresholdLower": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdLower",
                ],
              },
            },
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "AutoScalingGroupName",
            "Value": {
              "Ref": "PrivateRegistrationAutoscalingGroup",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/EC2",
        "Period": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmPeriodLower",
          ],
        },
        "Statistic": "Average",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmThresholdLower",
          ],
        },
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughHttpCode200sAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": "Triggers if load balancer in \${Stage} does not have enough 200s in half an hour. \${RunbookCopy}",
        },
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancerName",
            "Value": {
              "Ref": "LoadBalancerToPrivateASG",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Backend_2XX",
        "Namespace": "AWS/ELB",
        "OKActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "Period": 1800,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": {
          "Ref": "NotEnough200sThreshold",
        },
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughHttpCode200sPerDayAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": "Triggers if load balancer in \${Stage} does not have enough 200s in a whole day. \${RunbookCopy}",
        },
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancerName",
            "Value": {
              "Ref": "LoadBalancerToPrivateASG",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Backend_2XX",
        "Namespace": "AWS/ELB",
        "OKActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "Period": 86400,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": {
          "Ref": "NotEnough200sPerDayThreshold",
        },
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PrivateRegistrationAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "RegistrationLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfigurations": [
          {
            "NotificationTypes": [
              "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
              "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
            ],
            "TopicARN": {
              "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": {
              "Fn::FindInMap": [
                "Constants",
                "App",
                "Value",
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "CODE",
          },
          {
            "Key": "SystemdUnit",
            "PropagateAtLaunch": true,
            "Value": "registration.service",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "RegistrationLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "DistributionInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
    "ScaleDownPolicy": {
      "Properties": {
        "AdjustmentType": "ChangeInCapacity",
        "AutoScalingGroupName": {
          "Ref": "PrivateRegistrationAutoscalingGroup",
        },
        "Cooldown": "3600",
        "ScalingAdjustment": -1,
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "ScaleUpPolicy": {
      "Properties": {
        "AdjustmentType": "PercentChangeInCapacity",
        "AutoScalingGroupName": {
          "Ref": "PrivateRegistrationAutoscalingGroup",
        },
        "Cooldown": "300",
        "ScalingAdjustment": 100,
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
  },
}
`;

exports[`The Registration stack matches the snapshot for PROD 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Registration for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "registration",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "CPUAlarmPeriodLower": 300,
        "CPUAlarmPeriodUpper": 1200,
        "CPUAlarmThresholdLower": 20,
        "CPUAlarmThresholdUpper": 50,
        "InstanceType": "t4g.small",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "CPUAlarmPeriodLower": 300,
        "CPUAlarmPeriodUpper": 60,
        "CPUAlarmThresholdLower": 20,
        "CPUAlarmThresholdUpper": 50,
        "InstanceType": "t4g.small",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AlarmTopic": {
      "Description": "The ARN of the SNS topic to send all the cloudwatch alarms to",
      "Type": "String",
    },
    "CertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "LoggingStreamName": {
      "AllowedValues": [
        "/account/services/logging.stream.name.code",
        "/account/services/logging.stream.name",
      ],
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "NotEnough200sPerDayThreshold": {
      "Description": "Alarm if less than too many 200s. This value was based on just below 2 standard deviations from the mean over 6 weeks of data.",
      "Type": "Number",
    },
    "NotEnough200sThreshold": {
      "Description": "Alarm if less than this many 200s in half an hour",
      "Type": "Number",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "RunbookCopy": {
      "Default": "<<<Runbook|https://docs.google.com/document/d/1aJMytnPGeWH8YLpD2_66doxqyr8dPvAVonYIOG-zmOA>>>",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
  },
  "Resources": {
    "DistributionInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "DistributionRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "DistributionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": [
                    "ec2:DescribeTags",
                    "ec2:DescribeInstances",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "HighCPUAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "ScaleUpPolicy",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": [
            "Scale-Up if CPU is greater than \${CPUAlarmThresholdUpper} % over last \${CPUAlarmPeriodUpper} seconds",
            {
              "CPUAlarmPeriodUpper": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdUpper",
                ],
              },
              "CPUAlarmThresholdUpper": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdUpper",
                ],
              },
            },
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "AutoScalingGroupName",
            "Value": {
              "Ref": "PrivateRegistrationAutoscalingGroup",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/EC2",
        "Period": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmPeriodUpper",
          ],
        },
        "Statistic": "Average",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmThresholdUpper",
          ],
        },
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Fn::Sub": "\${CertArn}",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "LowCPUAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "ScaleDownPolicy",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": [
            "Scale-Down if CPU is less than \${CPUAlarmThresholdLower} % over last \${CPUAlarmPeriodLower} seconds",
            {
              "CPUAlarmPeriodLower": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmPeriodLower",
                ],
              },
              "CPUAlarmThresholdLower": {
                "Fn::FindInMap": [
                  "StageVariables",
                  {
                    "Ref": "Stage",
                  },
                  "CPUAlarmThresholdLower",
                ],
              },
            },
          ],
        },
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "AutoScalingGroupName",
            "Value": {
              "Ref": "PrivateRegistrationAutoscalingGroup",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/EC2",
        "Period": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmPeriodLower",
          ],
        },
        "Statistic": "Average",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "CPUAlarmThresholdLower",
          ],
        },
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughHttpCode200sAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": "Triggers if load balancer in \${Stage} does not have enough 200s in half an hour. \${RunbookCopy}",
        },
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancerName",
            "Value": {
              "Ref": "LoadBalancerToPrivateASG",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Backend_2XX",
        "Namespace": "AWS/ELB",
        "OKActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "Period": 1800,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": {
          "Ref": "NotEnough200sThreshold",
        },
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughHttpCode200sPerDayAlarm": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "AlarmDescription": {
          "Fn::Sub": "Triggers if load balancer in \${Stage} does not have enough 200s in a whole day. \${RunbookCopy}",
        },
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancerName",
            "Value": {
              "Ref": "LoadBalancerToPrivateASG",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Backend_2XX",
        "Namespace": "AWS/ELB",
        "OKActions": [
          {
            "Ref": "AlarmTopic",
          },
        ],
        "Period": 86400,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": {
          "Ref": "NotEnough200sPerDayThreshold",
        },
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PrivateRegistrationAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "RegistrationLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfigurations": [
          {
            "NotificationTypes": [
              "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
              "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
            ],
            "TopicARN": {
              "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": {
              "Fn::FindInMap": [
                "Constants",
                "App",
                "Value",
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "PROD",
          },
          {
            "Key": "SystemdUnit",
            "PropagateAtLaunch": true,
            "Value": "registration.service",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "RegistrationLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "DistributionInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
    "ScaleDownPolicy": {
      "Properties": {
        "AdjustmentType": "ChangeInCapacity",
        "AutoScalingGroupName": {
          "Ref": "PrivateRegistrationAutoscalingGroup",
        },
        "Cooldown": "3600",
        "ScalingAdjustment": -1,
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "ScaleUpPolicy": {
      "Properties": {
        "AdjustmentType": "PercentChangeInCapacity",
        "AutoScalingGroupName": {
          "Ref": "PrivateRegistrationAutoscalingGroup",
        },
        "Cooldown": "300",
        "ScalingAdjustment": 100,
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
  },
}
`;
